# nextjs-fastapi

./: .env  next.config.js  package.json  pnpm-lock.yaml  pyproject.toml
api/: index.py
api/app/: auth.py  todo.py
api/tools/: __init__.py  supabase_client.py
app/: page.tsx
app/categories/: page.tsx
app/categories/[id]/edit/: page.tsx
app/categories/add/: page.tsx
app/lib/: supabase-server.ts
app/todos/: page.tsx
app/todos/[id]/edit/: page.tsx
app/todos/add/: page.tsx
app/types/: todos.ts
src/api/: index.py
src/api/app/: auth.py  todo.py
src/api/tools/: __init__.py  supabase_client.py
supabase/: config.toml
supabase/migrations/: 20251125035917_remote_schema.sql  20251125091800_remote_data.sql  20251126070719_update_schema.sql  20251202015005_remote_schema.sql
