[project]
name = "nextjs-flask"
version = "0.1.0"
description = "A FastAPI application with Supabase authentication"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
    "starlette>=0.27.0",
]

[project.scripts]
app = 'api.index:app'

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["api"]  # 告诉 setuptools 在 "api" 目录下查找包
include = ["*"]  # (可选) 默认包含所有发现的包，即 app 和 tools
namespaces = false # (可选) 如果你不想使用隐式命名空间包

[tool.vercel.scripts]
build = "pip install -e ."